# LogSentry

./: .gitignore  DIRECTORY_GUIDE.md  FILE_INVENTORY.md  FOR_BEGINNERS.md  LOCAL_SETUP.md  PROJECT_EXPLANATION.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  docker-compose.yml  requirements.txt  setup.sh
.github/workflows/: ci.yml
alerting/: alert_manager.py  notifications.py
config/: config.yaml
dashboard/: app.py
dashboard/static/css/: style.css
dashboard/static/js/: dashboard.js
dashboard/templates/: index.html
docker/: Dockerfile.alerting  Dockerfile.consumer  Dockerfile.dashboard  Dockerfile.kvstore  Dockerfile.processor  Dockerfile.producer
kvstore/: CMakeLists.txt
kvstore/include/: bloom_filter.h  compaction.h  kvstore.h  lru_cache.h  lsm_engine.h  memtable.h  sstable.h  wal.h
kvstore/python_bindings/: kvstore_binding.cpp
kvstore/src/: bloom_filter.cpp  compaction.cpp  kvstore.cpp  lru_cache.cpp  lsm_engine.cpp  memtable.cpp  server.cpp  sstable.cpp  wal.cpp
kvstore/tests/: test_bloom_filter.cpp  test_kvstore.cpp  test_memtable.cpp  test_sstable.cpp  test_wal.cpp
log-processor/ml/: anomaly_detector.py  feature_extractor.py
log-processor/src/: kvstore_client.py  log_parser.py  processor.py
log-processor/tests/: test_anomaly_detector.py  test_processor.py
log-producers/: sample_api_server.py  sample_database_app.py  sample_web_app.py
scripts/: benchmark_kvstore.py  build.sh  run_tests.sh  setup.sh  start.sh
